--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 	line-height: 1.5em;
 	width: 100%;
 	display: table;
-	background:#b6daf0 url(../bj.jpg) center bottom no-repeat;
+	background:#b6daf0 url(./bj.jpg) center bottom no-repeat;
 }
 
 a:link, a:visited {	color: #87430c; text-decoration: none; }
